# agent2go

./: ARCHITECTURE_VISION.md  BUG_LIST.md  CREDENTIALS_INDEX.md  DEPLOYMENT_CHECKLIST.md  DEV_LOG.md  Dockerfile  ESA_DEPLOYMENT_STATUS.md  FEISHU_INTEGRATION.md  GIT_COMMIT_ARCHIVE.md  INTEGRATION_SUMMARY.md  KNOWN_ISSUES.md  LAUNCH_ACCEPTANCE.md  LAUNCH_DEPLOYMENT_LOG.md  LAUNCH_READY_CHECKLIST.md  LAUNCH_SUMMARY.md  MONITORING_DASHBOARD_SETUP.md  MVP_PROGRESS_REPORT.md  PHASE1_COMPLETION_REPORT.md  PHASE1_QUICKSTART.md  PHASE2_ACCEPTANCE_REPORT.md  PHASE2_PLAN.md  PHASE2_PROGRESS_1.md  PHASE3.5_ACCEPTANCE_REPORT.md  PHASE3_5_DELIVERY.md  PHASE3_ACCEPTANCE_REPORT.md  PHASE3_PROGRESS_1.md  PHASE4_ACCEPTANCE.md  PHASE4_DEPLOYMENT_REPORT.md  PHASE5_ACCEPTANCE.md  PHASE5_DELIVERY_SUMMARY.md  PHASE5_DEPLOYMENT.md  README_PHASE1.md  TOOLS.md  VERCEL_POSTGRES_SETUP.md  VERCEL_SETUP.md  deploy-vercel.sh  dev.db  next.config.static.ts  next.config.ts  nixpacks.toml  (+10 more)
design/: 20-screens-analysis.md  complete-design-spec.md  product-design-spec.md
docs/: PRD-v1.0.md  PRD-v2.0-full.md
memory/: 2026-03-14.md
mockups/: wechat-work-chat.html
prisma/: dev.db  migrate-to-postgres.sh  prisma.config.ts  schema.postgresql.prisma  schema.prisma  schema.sqlite.prisma  seed-templates.ts  seed.ts  seed.ts.bak
python/: pyproject.toml
python/src/: crew_runner.py  import_experts.py
research/: ALIYUN_COST_ANALYSIS.md  BUSINESS_ARCHITECTURE.md  CRAWAI_ARCHITECTURE.md  EXPERT_LIBRARY.md
test-reports/: PHASE4_TEST_REPORT.md  test-results.json
tests/: feishu-integration.test.ts  (+1 more)
(+120 files in other folders)
